tests/baselines/reference/unusedParameterProperty1.errors.txt
tests/cases/compiler/unusedParameterProperty1.ts(2,25): error TS6138: Property 'used' is declared but never used.
tests/cases/compiler/unusedParameterProperty1.ts(3,13): error TS6133: 'foge' is declared but never used.


==== tests/cases/compiler/unusedParameterProperty1.ts (2 errors) ====
    class A {
        constructor(private used: string) {
                            ~~~~
!!! error TS6138: Property 'used' is declared but never used.
            let foge = used;
                ~~~~
!!! error TS6133: 'foge' is declared but never used.
            foge += "";
        }
    }
    